Bug 940740 - Make sure do_GetService called in mainthread. r=mcmanus, a=1.3+